# SyncCore

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  synccore.spec
.github/workflows/: release.yml
core/: client.py  engine.py  management_api.py  orchestrator.py  peer_manager.py  queue_worker.py  server.py  watcher.py  ws.py
tests/: test_sync.py
utils/: auth.py  certs.py  conflict.py  discovery.py  file_index.py  file_ops.py  filters.py  logging.py  paths.py  resilience.py  trust_store.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/: Sidebar.tsx
web/src/hooks/: useWebSocket.ts
web/src/pages/: ConflictsPage.tsx  Dashboard.tsx  FilesPage.tsx  LoginPage.tsx  LogsPage.tsx  PeersPage.tsx  QueuePage.tsx  SettingsPage.tsx  SetupPage.tsx
